fixed wrong id for targetfilename input

--- a/Jellyfin.Plugin.FinTube/Pages/downloadPage.html
+++ b/Jellyfin.Plugin.FinTube/Pages/downloadPage.html
@@ -168,7 +168,7 @@
 							let payload = {
 								"ytid": 				parseYT(getfintubeValue("ytid")),
 								"targetlibrary":		getfintubeValue("targetlibrary"),
-								"targetfilename":		getfintubeValue("targetFilename"),
+								"targetfilename":		getfintubeValue("targetfilename"),
 								"targetfolder": 		getfintubeValue("targetfolder"),
 								"videoresolution":		getfintubeValue("videoresolution"),
 								"audioonly": 			document.getElementById("fintube-audioonly").checked,
